Prevent text wrap in section text

--- a/tigerapps/wintersession/static/wintersession/courses.scss
+++ b/tigerapps/wintersession/static/wintersession/courses.scss
@@ -237,6 +237,8 @@ $column-header-height: 40px;
     padding: 7px;
     position: relative;
     font-weight: bold;
+    white-space: nowrap;
+    overflow: hidden;
 
     transition: background linear 0.1s, color linear 0.1s;
 
